rename BLL, DAO, DTO, Utils

--- a/fMain.resx
+++ b/fMain.resx
@@ -236,6 +236,9 @@
         DTXQ3AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="pnlMain.GenerateMember" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>False</value>
+  </metadata>
   <data name="btnTableManagement.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAC4AAAAuCAYAAABXuSs3AAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
